--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,27 @@
 #root{
   background-color: var(--clr-neutral-900);
   color: var(--clr-neutral-100);
+  overflow-x: hidden;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--clr-primary-400);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .App {
