--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --clr-accent-400: hsl(0, 69%, 31%);
   --clr-accent-400: hsl(0, 75%, 42%);
   --clr-accent-300: hsl(12, 88%, 75%);
@@ -11,7 +11,7 @@
   --clr-neutral-200: hsl(53, 49%, 83%);
   --clr-neutral-100: hsl(0, 0%, 100%);
 
-  --ff-primary:  'Poppins';
+  --ff-primary: "Poppins";
 
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
@@ -20,9 +20,9 @@
   --fw-semi-bold: 500;
   --fw-bold: 700;
 
-  --fs-300: .8125rem;
-  --fs-400: .875rem;
-  --fs-500: .9375rem;
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875rem;
+  --fs-500: 0.9375rem;
   --fs-600: 1rem;
   --fs-700: 1.275rem;
   --fs-800: 2.5rem;
@@ -34,28 +34,42 @@
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
 
-  --size-100: .25rem;
-  --size-200: .5rem;
-  --size-300: .65rem;
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.65rem;
   --size-400: 1rem;
   --size-500: 1.5rem;
   --size-600: 2rem;
   --size-700: 3rem;
   --size-800: 4rem;
   --size-900: 5rem;
+  --size-1000: 9rem;
+  --size-1100: 10rem;
 }
 
-
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.primaryLayout-outlet-container {
+  margin-top: var(--size-1000);
+  min-height: 25.2vh;
+}
+@media (min-width: 992px) {
+  .primaryLayout-outlet-container {
+    margin-top: var(--size-1100);
+  }
 }
