--- a/src/pages/Shop/shop.css
+++ b/src/pages/Shop/shop.css
@@ -15,7 +15,10 @@
 
 .shop-accordion-body{
     background-color: var(--clr-neutral-700) !important;
-    color: var(--clr-neutral-100);
+}
+
+.MuiFormControlLabel-label{
+    color: var(--clr-neutral-100) !important;
 }
 
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
