--- a/src/components/WishlistCard/WishlistCard.css
+++ b/src/components/WishlistCard/WishlistCard.css
@@ -1,10 +1,11 @@
 .wishlist-card {
-  box-shadow: 5px 5px 5px var(--clr-primary-400);
+  box-shadow: var(--clr-primary-400) 0px 10px 10px -10px,
+    var(--clr-primary-400) 0px 3px 6px -3px;
   border: none !important;
 }
 .wishlist-card-body {
   background-color: var(--clr-neutral-700) !important;
-  color: var(--clr-primary-400) !important;
+  color: var(--clr-neutral-100) !important;
 }
 .wishlist-card-button {
   background: none;
