--- a/src/pages/Shop/shop.css
+++ b/src/pages/Shop/shop.css
@@ -36,3 +36,34 @@
     font-weight: var(--fw-semi-bold) !important;
     max-height: var(--size-700);
 }
+
+.skeleton {
+    opacity: .7;
+    animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-img {
+width: 189.75px;
+height: 189.75px;
+}
+.skeleton-text {
+    width: 100%;
+    height: 1.2rem;
+    margin-bottom: .75rem;
+    border-radius: .125rem;
+}
+.skeleton-price {
+    width: 40%;
+    height: 1rem;
+    margin-bottom: 1.5rem;
+    border-radius: .125rem;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: hsl(200, 20%, 70%);
+    }
+    100% {
+        background-color: hsl(200, 20%, 95%);
+    }
+}
