--- a/src/pages/Shop/shop.css
+++ b/src/pages/Shop/shop.css
@@ -67,3 +67,8 @@ height: 189.75px;
         background-color: hsl(200, 20%, 95%);
     }
 }
+.price-filter-input {
+    border: 2px solid var(--clr-primary-400);
+    border-radius: 5px;
+    opacity: 85%;
+}
